# tiktok-live-recorder

./: .gitignore  LICENSE  README.md  start.bat  start.sh
node/: .gitignore  README.md  package.json  start.bat  tsconfig.json
node/examples/: 01-record.js  02-watch-and-record.js
python/: .gitignore  README.md  pyproject.toml  start.bat  start.sh
python/tiktok_live_recorder/: __init__.py  __main__.py  cli.py  recorder.py
